2000-11-29  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.h: Re-order instance declaration
	to avoid compiler warning.

2000-11-29  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (JikesAPI, parseOptions,
	cleanupOptions):  Initialize the parsedOptions
	member to avoid deleting uninitialized memory.
	Set the parsedOptions member to NULL in
	cleanupOptions to avoid a double delete of memory.
	Set the parsedOptions member inside parseOptions()
	so that it can be deleted later.

2000-11-27  Mo DeJong  <mdejong@redhat.com>

	* src/jikes.cpp (main): Don't attempt to
	manage memory returned by JikesAPI::parseOptions().
	* src/jikesapi.cpp (cleanupOptions, parseOptions):
	Add new method to delete memory allocated to options.
	Construct an ArgumentExpander on the stack to avoid
	a memory leak.
	* src/jikesapi.h (parseOptions, cleanupOptions):
	Add note to documentation for parseOptions() method.
	Add declaration of private cleanupOptions() method.
	* src/symbol.h (~FileSymbol): Call array delete.

2000-11-26  Mo DeJong  <mdejong@redhat.com>

	* src/Makefile.am: Add efence rule. This rule will
	build an efence malloc debugging version of jikes.
	* src/Makefile.in: Regen.
	* src/error.cpp: Minor code reformat to improve
	readability. No functional changes made.
	* src/option.cpp: Minor comment reformat.
	
2000-10-28  Mo DeJong  <mdejong@redhat.com>

	* src/Makefile.am: Remove commented out bits.

2000-10-18  Mo DeJong  <mdejong@redhat.com>

	* src/incrmnt.cpp (Control::IncrementalRecompilation):
	Rewrite incremental compile loop so that only a single
	character at a time is read.

2000-10-14  Mo DeJong  <mdejong@redhat.com>

	* src/lookup.cpp: Remove #ifdef JIKES_DEBUG
	blocks from around blocks of code to free memory.

2000-10-14  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (compile): Minor code
	reformat. Allocate a control instance on
	the stack instead of the heap.
	* src/jikesapi.h: Minor code reformat.

2000-10-09  Mo DeJong  <mdejong@redhat.com>
